# cmake_external_data_example

./: CMakeLists.txt  README.md  data_file.bin.md5  test.cpp
